@@ -470,6 +470,49 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
             y=2,2
             terrain=Re
         [/terrain]
+        [label]
+            x,y=2,2
+            text="Math test"
+        [/label]
+        [event]
+            name=moveto
+            first_time_only=no
+            [filter]
+                side=1
+                x,y=2,2
+            [/filter]
+            [message]
+                speaker=narrator
+                image=wesnoth-icon.png
+                message="Enter a number."
+                [text_input]
+                    variable=number
+                    text=0
+                [/text_input]
+            [/message]
+            [message]
+                speaker=narrator
+                image=wesnoth-icon.png
+                message="How should we round $number|?
+`(any integer)
+`ceil
+`floor"
+                [text_input]
+                    variable=round
+                [/text_input]
+            [/message]
+            {VARIABLE rounded $number}
+#            {SET_VARIABLE rounded round $round}
+            [set_variable]
+                name=rounded
+                round=$round
+            [/set_variable]
+            [message]
+                speaker=narrator
+                image=wesnoth-icon.png
+                message="Rounding $number| to $round| results in $rounded|."
+            [/message]
+        [/event]
     [/event]
 
     [item]
